[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/entity/enemy/SleepingBall/SleepingBall.gd" type="Script" id=1]
[ext_resource path="res://src/entity/enemy/SleepingBall/SleepingBallRig.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entity/player/Hitbox.gd" type="Script" id=3]
[ext_resource path="res://src/engine/ui/HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.1896
height = 9.97319

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.8787, 24.1626 )

[node name="SleepingBall" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="StateMachine" type="Node" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -61.0
margin_top = -52.0
margin_right = 63.0
margin_bottom = -19.0

[node name="Body" type="Node2D" parent="."]

[node name="SleepingBallRig" parent="Body" instance=ExtResource( 2 )]

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1, 5 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( -1, 6 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="health_updated" from="." to="HealthBar" method="_on_SleepingBall_health_updated"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
